# ROLE_OS

./: .gitignore  CHANGELOG.md  DEMO.md  README.md  pyproject.toml  requirements.txt
builder/: README.md  builder.py  knowledge_extractor.py  requirements.txt  run_windows.bat
builder/extractors/: __init__.py  _util.py  decisions.py  entities.py  prompts.py  relationships.py  summary.py  todos.py
builder/tests/: test_builder_integration.py  test_extractors.py  test_pipeline.py
dashboard/: README.md  requirements.txt
dashboard/app/: config.py  db.py  main.py  models.py
dashboard/app/advisor/: __init__.py  db.py  engine.py  models.py  narrative.py  scoring.py
dashboard/app/graph/: __init__.py  (+4 more)
dashboard/tests/: conftest.py  test_advisor_api.py  test_advisor_db.py  test_advisor_engine.py  test_advisor_rules.py  test_advisor_scoring.py  test_api.py  test_explorer_api.py  test_graph_api.py  test_graph_builders.py  test_graph_engine.py  test_graph_models.py  test_graph_queries.py  test_health_score.py  test_import_api.py  test_import_db.py  test_import_parser.py  test_import_service.py  test_pi_api.py  test_projects_db.py  test_ui.py
docs/architecture/: 01_VISION.md  02_PRINCIPLES.md  03_ARCHITECTURE.md  04_DATA_MODEL.md  05_UI_GUIDELINES.md  06_DEVELOPMENT_RULES.md  07_ROADMAP.md
docs/product/: CHANGELOG_PRODUCT.md  DECISIONS.md
samples/chatgpt_export_example/: conversations-test.json
samples/role_os_sample/: README.md
scripts/: import_chatgpt.py  run_alpha.bat  run_alpha.sh  seed_alpha_demo.py
tests/: test_builder_smoke.py  test_import_chatgpt_cli.py
(+62 files in other folders)
